# damage-inspection-system

./: .gitignore  README.md  main.py  pyproject.toml  run.py  sample.env
app/: __init__.py  config.py
app/auth/: routes.py  services.py  validators.py
app/inspection/: __init__.py  routes.py  validators.py
app/models/: __init__.py  inspection.py  user.py
migrations/versions/: 60e6b9207f1c_initial_migration_with_users_and_.py
