[project]
name = "damage-inspection-system"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "bcrypt>=4.3.0",
    "cryptography>=45.0.5",
    "flask>=3.1.1",
    "flask-migrate>=4.1.0",
    "flask-sqlalchemy>=3.1.1",
    "pymysql>=1.1.1",
    "python-dotenv>=1.1.1",
]
